# ogre-next-cegui-test

./: CMakeLists.txt
src/: FPSGame.cpp  FPSGame.h  GUI.cpp  main.cpp
